2008-07-10 Tyler Romeo

	*DumpDatabase.php: Removed extraneous comma from the popen command.

	Added support for different database connection ports.

	*WikiBackup_body.php (WikiBackup.execute): Added $wgDBport to list of arguments given to background script.
	*DumpDatabase.php: In mysql_connect command, enclosed $wgDBserver in quotations and added $wgDBport to end.

	Added ability to import database dumps.

	*WikiBackup.php: Added new values to LogType arrays to support the 'backup-import' type. Also fixed message names.
	*WikiBackup.i18n.php: Added new import-backup messages to messages array. Also fixed messaged names for standardization.

	*WikiBackup_body.php (SpecialBackup.execute): Added check for 'backupimport' action.
	*WikiBackup_body.php (SpecialBackup.importBackup): New function to trigger import function on WikiBackup class.
	*WikiBackup_body.php (WikiBackup.import): New function to trigger ImportDatabase.php file to import XML dumps.
	*java/mwdumper.jar and java/mysql-connector.jar: Added java files that aid in importing the database.

	*ImportDatabase.php: Added new file to import database. File needs to be changed to dump existing SQL info before importing.

	Added feature where scripts locks database when importing.

	*WikiBackup_body.php (WikiBackup.import): Added $wgReadOnlyFile parameter to import script file. Also added message parameter.
	*ImportDatabase.php: Added code to lock database with message passed by main script.
	*WikiBackup.i18n.php: Added message for when database is locked.

	*ImportDatabase.php: Added code to truncate revision, page, and text tables for successful import.

	Made backup complete header disappear after user visits Special Page.

	*WikiBackup_body.php (SpecialBackup.mainBackupPage): Added call to SpecialBackup.clearHeaderMessage after all HTML has been output.
	*WikiBackup_body.php (SpecialBackup.clearHeaderMessage): New function that clears lastbackup field in user table, which clears header message.
