@@ -1,3 +1,9 @@
+2008-07-13 Tyler Romeo
+
+	Added more coding notes to the script.
+
+	*WikiBackup_body.php: Added descriptions for each function and class.
+
 2008-07-10 Tyler Romeo
 
 	*DumpDatabase.php: Removed extraneous comma from the popen command.
